[package]
name = "imgui-wgpu-glfw-example"
version = "0.0.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# dev requirements: cmake, libxinerama, libxcursor, libxi, python

[dependencies]
futures = "0.3.4"
glfw = "0.37.0"
shaderc = "0.6.2"
bytemuck = "1.2.0"
failure = "0.1.8"
imgui = "0.4.0"
imgui-wgpu = { git = "https://github.com/dwbrite/imgui-wgpu-rs", rev = "c3463ad1d3ee287d671246b0bb5881d0876001e0" } # v0.7 (not yet on crates.io)
imgui-glfw-support = { git = "https://github.com/dwbrite/imgui-glfw-support", rev = "83e0aed6a8d39cf416cf178c9e609a3458960977"} # version bumps because ^


[dependencies.wgpu]
version = "0.5.0"
features = ["vulkan"]



